--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
   <meta name="author" content="Xuyuan Liu">
   <meta property="og:title" content="Xuyuan Liu" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://hsuyuanliu.github.io/" />
+  <meta property="og:url" content="https://xuyuan0204.github.io/" />
   <meta property="og:site_name" content="Xuyuan Liu" />
-  <link rel="canonical" href="https://hsuyuanliu.github.io/" />
+  <link rel="canonical" href="https://xuyuan0204.github.io/" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
